--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
           </div>
         </div>
       </section>
-      <div class="container"></div>
+      <div class="container">
+        <input/>
+      </div>
     <script src="/index.js"></script>
 </body>
 </html>
