--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       </section>
       <div class="container">
         <input/>
+        <div id="target"></div>
       </div>
     <script src="/utils.js"></script>
     <script src="/index.js"></script>
