--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         </div>
       </section>
       <div class="container">
-        <input/>
+       <div class="autocomplete"></div>
+      </div>
         <div id="target"></div>
       </div>
     <script src="/utils.js"></script>
