--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="column is-half notification is-primary tutorial">
             <h1 class="title"> Search For a Movie on Both Sides</h1>
-            <p class="subtitle">We will tell you which is best!</p>
+            <p class="subtitle">We will tell you which is best!!!</p>
           </div>
         </div>
     <script src="/utils.js"></script>
