--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css"/>
     <link rel="stylesheet" href="/style.css"/>
-    <title>Movie Search</title>
+    <title>Movie Fight</title>
 </head>
 <body>
     <section class="hero is-primary is-bold">
